force-app/main/default/objects/RFQ__c/fields/Evaluation_Method__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Method__c</fullName>
    <label>Evaluation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lowest Price (L1)</fullName>
            </value>
            <value>
                <fullName>Best Value</fullName>
            </value>
            <value>
                <fullName>Technical + Commercial</fullName>
            </value>
            <value>
                <fullName>Single Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>