force-app/main/default/objects/RFQ__c/fields/INCOTERMS__c.field-meta.xml
<CustomField>
    <fullName>INCOTERMS__c</fullName>
    <label>INCOTERMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXW</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DPU</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>