force-app/main/default/objects/RFQ__c/fields/RFQ_Description__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Description__c</fullName>
    <label>RFQ Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>