force-app/main/default/objects/RFQ__c/fields/RFQ_Title__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Title__c</fullName>
    <label>RFQ Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>